@@ -141,6 +141,12 @@ function [acquisitionPossible,msg] = checkIfAcquisitionIsPossible(obj)
         msgNumber=msgNumber+1;
     end
 
+    % If using ScanImage, did the user switch on all the PMTs for the channels being saved?
+    if isa(obj.scanner,'SIBT') && ~isequal(obj.scanner.channelsToAcquire,obj.scanner.getEnabledPMTs)
+        obj.scanner.channelsToAcquire,obj.scanner.getEnabledPMTs
+        msg=sprintf('%s%d) Check you have enabled the correct PMTs and try again.\n', msg,msgNumber);
+        msgNumber=msgNumber+1;
+    end
 
     % Do we have enough disk space for the acquisition to proceed?
     if obj.isRecipeConnected && exist(obj.sampleSavePath,'dir')
