@@ -6,9 +6,12 @@ When mature, changes should be merged into master *as a merge commit*  and this 
 In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
 The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 
 
+
 7th June 2019
 - USER: BakingTray can now often recover modelock failures of the laser
 - USER: Confirmation dialog prior to Bake 
+- USER: Checks that the correct PMTs are enabled before Bake
+
 
 21st March 2019
 - Tweaks to acquisition time estimate
